--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "fifteen-brave",
    "metadata": {},
    "outputs": [],
@@ -383,8 +383,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "happy-syndicate",
+   "execution_count": 2,
+   "id": "level-reward",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,12 +398,28 @@
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "plt.style.use('ggplot')\n",
-    "%matplotlib inline\n",
-    "\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "wicked-header",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from sqlalchemy import create_engine, Table, Column, MetaData, String, Integer, Float, DateTime, Computed, Identity\n",
     "conn_string = \"postgresql://nycrideshare:nycrideshare@127.0.0.1:5432/nyc_taxi\"\n",
-    "nyc_database = create_engine(conn_string)\n",
-    "\n",
+    "nyc_database = create_engine(conn_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "happy-syndicate",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "meta = MetaData(nyc_database, schema='nyc_taxi_schema')\n",
     "nyc_table = Table('ride_details', meta,\n",
     "                  Column('id', Integer, Identity(start=1, cycle=False), primary_key=True),\n",
