--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "fifteen-brave",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Anaconda\\envs\\nyc_rideshare\\lib\\site-packages\\pyproj\\__init__.py:76: UserWarning: pyproj unable to set database path.\n",
+      "  _pyproj_global_context_initialize()\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -16,6 +25,7 @@
     "from descartes.patch import PolygonPatch\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "plt.style.use('ggplot')\n",
     "%matplotlib inline"
    ]
@@ -30,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "greater-cambridge",
    "metadata": {},
    "outputs": [],
@@ -41,35 +51,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "earlier-prior",
+   "cell_type": "markdown",
+   "id": "organic-sussex",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## Create table in PostgreSQL using psycopg2"
+    "## Create table in PostgreSQL using psycopg2\n",
+    "### Uncmment and Do it ONLY ONCE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "monetary-essay",
    "metadata": {},
    "outputs": [],
    "source": [
-    "meta = MetaData(nyc_database, schema='nyc_taxi_schema')\n",
-    "nyc_table = Table('ride_details', meta,\n",
-    "                  Column('id', Integer, Identity(start=1, cycle=False), primary_key=True),\n",
-    "                  Column('tpep_pickup_datetime', DateTime),\n",
-    "                  Column('tpep_dropoff_datetime', DateTime),\n",
-    "                  Column('passenger_count', Integer),\n",
-    "                  Column('trip_distance', Float),\n",
-    "                  Column('PULocationID', Integer),\n",
-    "                  Column('DOLocationID', Integer),\n",
-    "                  Column('fare_amount', Float))\n",
+    "# meta = MetaData(nyc_database, schema='nyc_taxi_schema')\n",
+    "# nyc_table = Table('ride_details', meta,\n",
+    "#                   Column('id', Integer, Identity(start=1, cycle=False), primary_key=True),\n",
+    "#                   Column('tpep_pickup_datetime', DateTime),\n",
+    "#                   Column('tpep_dropoff_datetime', DateTime),\n",
+    "#                   Column('passenger_count', Integer),\n",
+    "#                   Column('trip_distance', Float),\n",
+    "#                   Column('PULocationID', Integer),\n",
+    "#                   Column('DOLocationID', Integer),\n",
+    "#                   Column('fare_amount', Float))\n",
     "\n",
-    "with nyc_database.connect() as conn:\n",
-    "    nyc_table.create()"
+    "# with nyc_database.connect() as conn:\n",
+    "#     nyc_table.create()"
    ]
   },
   {
@@ -82,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "frank-leisure",
    "metadata": {},
    "outputs": [
@@ -132,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "incomplete-northern",
    "metadata": {},
    "outputs": [],
@@ -172,18 +181,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "temporal-coordination",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done Inserting\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "j, chunksize = 1, 100000\n",
     "for month in range(1, 6):\n",
@@ -195,6 +196,7 @@
     "                          chunksize=chunksize, \n",
     "                          iterator=True, \n",
     "                          usecols=[1, 2, 3, 4, 7, 8, 10]):\n",
+    "        new_j = df.index[-1]\n",
     "        df.dropna(inplace=True)\n",
     "        drop_indices = df[\n",
     "            (df.tpep_pickup_datetime == df.tpep_dropoff_datetime )|\n",
@@ -209,10 +211,13 @@
     "            (df.DOLocationID == 265) |\n",
     "            (df.trip_distance < 0.1)\n",
     "        ].index\n",
+    "        \n",
     "        df.drop(drop_indices, inplace=True)\n",
-    "        df.index += j\n",
+    "        df.index += new_j\n",
     "        copy_from_stringio(conn_2, df, \"ride_details\")\n",
-    "        j = df.index[-1] + 1\n",
+    "#         print(j, df.index[-1], new_j)\n",
+    "\n",
+    "        j = new_j + 1\n",
     "del df\n",
     "print(\"Done Inserting\")"
    ]
