--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "fifteen-brave",
+   "execution_count": 2,
+   "id": "biological-ivory",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
     "import pandas as pd\n",
     "import geopandas as gpd\n",
     "import psycopg2\n",
-    "import shapefile\n",
+    "\n",
     "from shapely.geometry import Polygon , Point\n",
     "\n",
     "import matplotlib as mpl\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "classical-latino",
+   "id": "transsexual-plumbing",
    "metadata": {},
    "source": [
     "## Create SQL Alchemy Object to Run Queries"
@@ -31,8 +31,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "greater-cambridge",
+   "execution_count": 3,
+   "id": "opponent-fitness",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "intermediate-regard",
+   "id": "reasonable-arlington",
    "metadata": {},
    "source": [
     "## Create table in PostgreSQL using psycopg2\n",
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "monetary-essay",
+   "id": "average-rider",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "diagnostic-timothy",
+   "id": "grave-packaging",
    "metadata": {},
    "source": [
     "## Test psycopg2 connection"
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "frank-leisure",
+   "id": "smaller-pennsylvania",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "massive-budget",
+   "id": "touched-foster",
    "metadata": {},
    "source": [
     "## Logic to copy DF to DB the fastest way"
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "incomplete-northern",
+   "id": "matched-dictionary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eligible-idaho",
+   "id": "sunset-liechtenstein",
    "metadata": {},
    "source": [
     "## Insert rows of 6 months data to DB in Chunks. Perform cleaning before inserting"
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "temporal-coordination",
+   "id": "effective-rating",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "floppy-feature",
+   "id": "devoted-liverpool",
    "metadata": {},
    "source": [
     "## Insert spatial data to the DB "
@@ -228,10 +228,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "consolidated-timothy",
+   "execution_count": 5,
+   "id": "ahead-abuse",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Anaconda\\envs\\nyc_rideshare\\lib\\site-packages\\pyproj\\crs\\crs.py:53: FutureWarning: '+init=<authority>:<code>' syntax is deprecated. '<authority>:<code>' is the preferred initialization method. When making the change, be mindful of axis order changes: https://pyproj4.github.io/pyproj/stable/gotchas.html#axis-order-changes-in-proj-6\n",
+      "  return _prepare_from_string(\" \".join(pjargs))\n",
+      "<ipython-input-5-0a84fffd8ed4>:2: UserWarning: CRS mismatch between the CRS of left geometries and the CRS of right geometries.\n",
+      "Use `to_crs()` to reproject one of the input geometries to match the CRS of the other.\n",
+      "\n",
+      "Left CRS: +init=epsg:4326 +type=crs\n",
+      "Right CRS: EPSG:4326\n",
+      "\n",
+      "  gpd.sjoin(gpd.GeoDataFrame(crs={'init': 'epsg:4326'},\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -333,15 +348,13 @@
        "4  Staten Island  POLYGON ((-74.17422 40.56257, -74.17349 40.562...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# from pyproj import CRS\n",
-    "# crs = CRS(\"epsg:4326\")\n",
-    "gdf = gpd.read_file('./data/2019/taxi_zones/taxi_zones.shp').to_crs({'init': 'epsg:4326'})\n",
+    "gdf = gpd.read_file('./data/2019/taxi_zones/taxi_zones.shp').to_crs('epsg:4326')\n",
     "gpd.sjoin(gpd.GeoDataFrame(crs={'init': 'epsg:4326'},\n",
     "    geometry=[Point(-73.966, 40.78)]), \n",
     "    gdf, how='left', op='within')\n",
@@ -351,8 +364,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "subtle-algorithm",
+   "execution_count": null,
+   "id": "chief-repository",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,143 +375,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "signed-reaction",
+   "execution_count": null,
+   "id": "rural-florist",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>passenger_count</th>\n",
-       "      <th>trip_distance</th>\n",
-       "      <th>PULocationID</th>\n",
-       "      <th>DOLocationID</th>\n",
-       "      <th>fare_amount</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>6.001386e+06</td>\n",
-       "      <td>6.001386e+06</td>\n",
-       "      <td>6.001386e+06</td>\n",
-       "      <td>6.001386e+06</td>\n",
-       "      <td>6.001386e+06</td>\n",
-       "      <td>6.001386e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>1.018822e+08</td>\n",
-       "      <td>1.170440e+00</td>\n",
-       "      <td>2.921359e+00</td>\n",
-       "      <td>1.631010e+02</td>\n",
-       "      <td>1.611063e+02</td>\n",
-       "      <td>1.253339e+01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>8.985589e+07</td>\n",
-       "      <td>3.760193e-01</td>\n",
-       "      <td>3.715104e+00</td>\n",
-       "      <td>6.508094e+01</td>\n",
-       "      <td>6.937525e+01</td>\n",
-       "      <td>2.546391e+02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>1.000000e-01</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>-2.300000e+02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>2.091911e+07</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>1.250000e+02</td>\n",
-       "      <td>1.120000e+02</td>\n",
-       "      <td>6.500000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>7.793376e+07</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>1.610000e+00</td>\n",
-       "      <td>1.620000e+02</td>\n",
-       "      <td>1.620000e+02</td>\n",
-       "      <td>9.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>1.710510e+08</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>2.950000e+00</td>\n",
-       "      <td>2.330000e+02</td>\n",
-       "      <td>2.330000e+02</td>\n",
-       "      <td>1.350000e+01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>1.384378e+09</td>\n",
-       "      <td>2.000000e+00</td>\n",
-       "      <td>8.318000e+02</td>\n",
-       "      <td>2.630000e+02</td>\n",
-       "      <td>2.630000e+02</td>\n",
-       "      <td>6.232599e+05</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 id  passenger_count  trip_distance  PULocationID  \\\n",
-       "count  6.001386e+06     6.001386e+06   6.001386e+06  6.001386e+06   \n",
-       "mean   1.018822e+08     1.170440e+00   2.921359e+00  1.631010e+02   \n",
-       "std    8.985589e+07     3.760193e-01   3.715104e+00  6.508094e+01   \n",
-       "min    1.000000e+00     1.000000e+00   1.000000e-01  1.000000e+00   \n",
-       "25%    2.091911e+07     1.000000e+00   1.000000e+00  1.250000e+02   \n",
-       "50%    7.793376e+07     1.000000e+00   1.610000e+00  1.620000e+02   \n",
-       "75%    1.710510e+08     1.000000e+00   2.950000e+00  2.330000e+02   \n",
-       "max    1.384378e+09     2.000000e+00   8.318000e+02  2.630000e+02   \n",
-       "\n",
-       "       DOLocationID   fare_amount  \n",
-       "count  6.001386e+06  6.001386e+06  \n",
-       "mean   1.611063e+02  1.253339e+01  \n",
-       "std    6.937525e+01  2.546391e+02  \n",
-       "min    1.000000e+00 -2.300000e+02  \n",
-       "25%    1.120000e+02  6.500000e+00  \n",
-       "50%    1.620000e+02  9.000000e+00  \n",
-       "75%    2.330000e+02  1.350000e+01  \n",
-       "max    2.630000e+02  6.232599e+05  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_jan.describe()"
    ]
@@ -520,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
