--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "biological-ivory",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "opponent-fitness",
    "metadata": {},
    "outputs": [],
@@ -233,21 +233,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\Anaconda\\envs\\nyc_rideshare\\lib\\site-packages\\pyproj\\crs\\crs.py:53: FutureWarning: '+init=<authority>:<code>' syntax is deprecated. '<authority>:<code>' is the preferred initialization method. When making the change, be mindful of axis order changes: https://pyproj4.github.io/pyproj/stable/gotchas.html#axis-order-changes-in-proj-6\n",
-      "  return _prepare_from_string(\" \".join(pjargs))\n",
-      "<ipython-input-5-0a84fffd8ed4>:2: UserWarning: CRS mismatch between the CRS of left geometries and the CRS of right geometries.\n",
-      "Use `to_crs()` to reproject one of the input geometries to match the CRS of the other.\n",
-      "\n",
-      "Left CRS: +init=epsg:4326 +type=crs\n",
-      "Right CRS: EPSG:4326\n",
-      "\n",
-      "  gpd.sjoin(gpd.GeoDataFrame(crs={'init': 'epsg:4326'},\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -355,10 +340,10 @@
    ],
    "source": [
     "gdf = gpd.read_file('./data/2019/taxi_zones/taxi_zones.shp').to_crs('epsg:4326')\n",
-    "gpd.sjoin(gpd.GeoDataFrame(crs={'init': 'epsg:4326'},\n",
+    "gpd.sjoin(gpd.GeoDataFrame(crs='epsg:4326',\n",
     "    geometry=[Point(-73.966, 40.78)]), \n",
     "    gdf, how='left', op='within')\n",
-    "# gdf.to_postgis(\"nyc_zones\", nyc_database)\n",
+    "gdf.to_postgis(\"nyc_zones\", nyc_database)\n",
     "gdf.head()"
    ]
   },
