--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "biological-ivory",
+   "id": "structured-france",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "transsexual-plumbing",
+   "id": "joint-nursery",
    "metadata": {},
    "source": [
     "## Create SQL Alchemy Object to Run Queries"
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "opponent-fitness",
+   "id": "thermal-crest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reasonable-arlington",
+   "id": "blank-morris",
    "metadata": {},
    "source": [
     "## Create table in PostgreSQL using psycopg2\n",
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "average-rider",
+   "id": "solid-gregory",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "grave-packaging",
+   "id": "weekly-claim",
    "metadata": {},
    "source": [
     "## Test psycopg2 connection"
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "smaller-pennsylvania",
+   "id": "assured-memorabilia",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "touched-foster",
+   "id": "hybrid-nickname",
    "metadata": {},
    "source": [
     "## Logic to copy DF to DB the fastest way"
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "matched-dictionary",
+   "id": "involved-queen",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sunset-liechtenstein",
+   "id": "demonstrated-course",
    "metadata": {},
    "source": [
     "## Insert rows of 6 months data to DB in Chunks. Perform cleaning before inserting"
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "effective-rating",
+   "id": "measured-appointment",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "devoted-liverpool",
+   "id": "confident-jurisdiction",
    "metadata": {},
    "source": [
     "## Insert spatial data to the DB "
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ahead-abuse",
+   "id": "round-finger",
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "chief-repository",
+   "id": "competitive-plasma",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,12 +361,57 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rural-florist",
+   "id": "animal-celtic",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_jan.describe()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "square-upgrade",
+   "metadata": {},
+   "source": [
+    "## Extracting some data in 5 minutes interval "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "advisory-neighbor",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime, timedelta\n",
+    "interval_dict = {\n",
+    "    60: \"\"\"'1 MINUTES'\"\"\",\n",
+    "    900: \"\"\"'15 MINUTES'\"\"\",\n",
+    "    300: \"\"\"'5 MINUTES'\"\"\",\n",
+    "    540: \"\"\"'7 MINUTES'\"\"\"\n",
+    "}\n",
+    "second_value = 300\n",
+    "for i in range(0, ((24 * 3600 * 2 )), second_value):\n",
+    "    start_time = datetime(2019, 1,1, 00, 00,00) + timedelta(seconds=i)\n",
+    "    time_string = start_time.strftime(\"%Y%m%d_%H%M%S\")\n",
+    "    \n",
+    "    filename = f\"taxi_data_{time_string}.csv\"\n",
+    "    \n",
+    "    \n",
+    "    query = f\"\"\"select id, tpep_pickup_datetime, tpep_dropoff_datetime, passenger_count, \"PULocationID\", \"DOLocationID\"\n",
+    "    from nyc_taxi_schema.get_cust_between_timestamps_lgd('{start_time.strftime(\"%Y-%m-%d %H:%M:%S\")}', {interval_dict[second_value]});\"\"\"\n",
+    "    df_temp = pd.read_sql_query(query, nyc_database)\n",
+    "    df_temp.to_csv(path_or_buf=r\"./data/output/\"+filename)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "seasonal-butler",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
