Added adjacency matrix and OSRM logic

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "structured-france",
+   "id": "polish-television",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "joint-nursery",
+   "id": "vulnerable-baseline",
    "metadata": {},
    "source": [
     "## Create SQL Alchemy Object to Run Queries"
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "thermal-crest",
+   "id": "olympic-cartoon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blank-morris",
+   "id": "banned-church",
    "metadata": {},
    "source": [
     "## Create table in PostgreSQL using psycopg2\n",
@@ -52,8 +52,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "solid-gregory",
+   "execution_count": null,
+   "id": "surgical-court",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "weekly-claim",
+   "id": "agreed-hormone",
    "metadata": {},
    "source": [
     "## Test psycopg2 connection"
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "assured-memorabilia",
+   "id": "soviet-bandwidth",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hybrid-nickname",
+   "id": "earlier-method",
    "metadata": {},
    "source": [
     "## Logic to copy DF to DB the fastest way"
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "involved-queen",
+   "id": "prerequisite-browser",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "demonstrated-course",
+   "id": "polyphonic-entity",
    "metadata": {},
    "source": [
     "## Insert rows of 6 months data to DB in Chunks. Perform cleaning before inserting"
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "measured-appointment",
+   "id": "preliminary-trademark",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "confident-jurisdiction",
+   "id": "conventional-railway",
    "metadata": {},
    "source": [
     "## Insert spatial data to the DB "
@@ -228,8 +228,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "round-finger",
+   "execution_count": 12,
+   "id": "formal-telescope",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
        "4  Staten Island  POLYGON ((-74.17422 40.56257, -74.17349 40.562...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,14 +343,14 @@
     "gpd.sjoin(gpd.GeoDataFrame(crs='epsg:4326',\n",
     "    geometry=[Point(-73.966, 40.78)]), \n",
     "    gdf, how='left', op='within')\n",
-    "gdf.to_postgis(\"nyc_zones\", nyc_database)\n",
+    "# gdf.to_postgis(\"nyc_zones\", nyc_database)\n",
     "gdf.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "competitive-plasma",
+   "id": "basic-bench",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "animal-celtic",
+   "id": "parallel-knowing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "square-upgrade",
+   "id": "finished-bankruptcy",
    "metadata": {},
    "source": [
     "## Extracting some data in 5 minutes interval "
@@ -378,8 +378,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "advisory-neighbor",
+   "execution_count": 6,
+   "id": "dramatic-southwest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,20 +398,152 @@
     "    filename = f\"taxi_data_{time_string}.csv\"\n",
     "    \n",
     "    \n",
-    "    query = f\"\"\"select id, tpep_pickup_datetime, tpep_dropoff_datetime, passenger_count, \"PULocationID\", \"DOLocationID\"\n",
+    "    query = f\"\"\"select id, tpep_pickup_datetime, tpep_dropoff_datetime, passenger_count, \"PULocationID\", \"DOLocationID\", ST_Distance(pickup_shape, dropoff_shape, false)\n",
     "    from nyc_taxi_schema.get_cust_between_timestamps_lgd('{start_time.strftime(\"%Y-%m-%d %H:%M:%S\")}', {interval_dict[second_value]});\"\"\"\n",
     "    df_temp = pd.read_sql_query(query, nyc_database)\n",
-    "    df_temp.to_csv(path_or_buf=r\"./data/output/\"+filename)\n",
+    "    df_temp.to_csv(path_or_buf=r\"./data/output/\"+filename, index=False)\n",
     "    \n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "annoying-grocery",
+   "metadata": {},
+   "source": [
+    "## Create a Adjacency matrix that calculates the path between the zones"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "seasonal-butler",
+   "execution_count": 3,
+   "id": "dimensional-wrestling",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import requests\n",
+    "import folium\n",
+    "import polyline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "chemical-refund",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'route': [(40.73465, -73.99041),\n",
+       "  (40.73329, -73.98718),\n",
+       "  (40.73196, -73.98815),\n",
+       "  (40.73002, -73.98354),\n",
+       "  (40.73239, -73.9818)],\n",
+       " 'start_point': [40.734646, -73.990408],\n",
+       " 'end_point': [40.732389, -73.9818],\n",
+       " 'distance': 1226.1}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_route(pickup_lat, pickup_long, dropoff_lat, dropoff_long):\n",
+    "    url = f\"http://127.0.0.1:5000/route/v1/driving/{pickup_lat},{pickup_long};{dropoff_lat},{dropoff_long}\"\n",
+    "    r = requests.get(url)\n",
+    "    res = r.json()\n",
+    "    routes = polyline.decode(res['routes'][0]['geometry'])\n",
+    "    start_point = [res['waypoints'][0]['location'][1], res['waypoints'][0]['location'][0]]\n",
+    "    end_point = [res['waypoints'][1]['location'][1], res['waypoints'][1]['location'][0]]\n",
+    "    distance = res['routes'][0]['distance']\n",
+    "    out = {'route':routes,\n",
+    "           'start_point':start_point,\n",
+    "           'end_point':end_point,\n",
+    "           'distance':distance\n",
+    "          }\n",
+    "    return out\n",
+    "\n",
+    "pickup_lat, pickup_long = -73.990371704101563,40.734695434570313\n",
+    "dropoff_lat, dropoff_long = -73.981842041015625,40.732406616210937\n",
+    "\n",
+    "test_route = get_route(pickup_lat, pickup_long, dropoff_lat, dropoff_long)\n",
+    "test_route"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "common-burlington",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getXY(pt):\n",
+    "    return (pt.x, pt.y)\n",
+    "centroidseries = gdf['geometry'].centroid\n",
+    "x_x,y_y = [list(t) for t in zip(*map(getXY, centroidseries))]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "surgical-society",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "series = gdf['LocationID'].tolist()\n",
+    "dicto = {\n",
+    "    \"LocationID\": series,\n",
+    "    \"Lat\":x_x,\n",
+    "    \"Long\":y_y\n",
+    "}\n",
+    "dff = pd.DataFrame(dicto)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "stuck-satellite",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dff.to_csv(\"./data/output/Zones_centroid.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "waiting-selection",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zone_dist = pd.DataFrame( np.zeros(shape=( len(gdf), len(gdf ))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "behavioral-thomson",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(0, len(zone_dist)):\n",
+    "    for j in range(0, len(zone_dist)):\n",
+    "        if i != j and zone_dist[i][j] == 0.:\n",
+    "            route = get_route(x_x[i], y_y[i], x_x[j], y_y[j])\n",
+    "            zone_dist[i][j] = route['distance']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "registered-surface",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zone_dist.to_csv(r\"./data/interzonal.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
