--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -427,11 +427,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "chemical-refund",
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "{'route': [(40.73465, -73.99041),\n",
@@ -441,12 +442,12 @@
        "  (40.73239, -73.9818)],\n",
        " 'start_point': [40.734646, -73.990408],\n",
        " 'end_point': [40.732389, -73.9818],\n",
-       " 'distance': 1226.1}"
+       " 'distance': 1226.1,\n",
+       " 'duration': 169.6}"
       ]
      },
-     "execution_count": 9,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 16
     }
    ],
    "source": [
@@ -458,10 +459,12 @@
     "    start_point = [res['waypoints'][0]['location'][1], res['waypoints'][0]['location'][0]]\n",
     "    end_point = [res['waypoints'][1]['location'][1], res['waypoints'][1]['location'][0]]\n",
     "    distance = res['routes'][0]['distance']\n",
+    "    duration = res['routes'][0]['duration']\n",
     "    out = {'route':routes,\n",
     "           'start_point':start_point,\n",
     "           'end_point':end_point,\n",
-    "           'distance':distance\n",
+    "           'distance':distance,\n",
+    "           'duration':duration\n",
     "          }\n",
     "    return out\n",
     "\n",
@@ -513,17 +516,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 17,
    "id": "waiting-selection",
    "metadata": {},
    "outputs": [],
    "source": [
-    "zone_dist = pd.DataFrame( np.zeros(shape=( len(gdf), len(gdf ))))"
+    "zone_dist = pd.DataFrame( np.zeros(shape=( len(gdf), len(gdf ))))\n",
+    "zone_time = pd.DataFrame( np.zeros(shape=( len(gdf), len(gdf ))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 18,
    "id": "behavioral-thomson",
    "metadata": {},
    "outputs": [],
@@ -532,25 +536,26 @@
     "    for j in range(0, len(zone_dist)):\n",
     "        if i != j and zone_dist[i][j] == 0.:\n",
     "            route = get_route(x_x[i], y_y[i], x_x[j], y_y[j])\n",
-    "            zone_dist[i][j] = route['distance']"
+    "            zone_dist[i][j] = route['distance']\n",
+    "            zone_time[i][j] = route['duration']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 20,
    "id": "registered-surface",
    "metadata": {},
    "outputs": [],
    "source": [
-    "zone_dist.to_csv(r\"./data/interzonal.csv\", index=False)"
+    "zone_dist.to_csv(r\"./data/interzonal.csv\", index=False)\n",
+    "zone_time.to_csv(r\"./data/interzonal_time.csv\", index=False)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python388jvsc74a57bd0a0326998f42f45cdf4fa07683a4c17a5d1586f4c5cfcf7cdaf4ddb7918bb174f",
+   "display_name": "Python 3.8.8 64-bit ('nyc_rideshare': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -562,7 +567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.8-final"
   }
  },
  "nbformat": 4,
