--- a/nyc_ride_simulation.ipynb
+++ b/nyc_ride_simulation.ipynb
@@ -41,16 +41,49 @@
     "<b>Danger:</b> Run Stage 0 before starting this\n",
     "</div>\n",
     "\n",
-    "### Input: Time Period, Poolsize\n",
-    "### Output: CSV / Pandas DF that contains data for the next cycle\n",
-    "* The CSV will contain these fields: \n",
-    "    * id\n",
-    "    * tpep_pickup_datetime\n",
-    "    * tpep_dropoff_datetime\n",
-    "    * passenger_count\n",
-    "    * trip_distance\n",
-    "    * PULocationID\n",
-    "    * DOLocationID\n"
+    "### Input: \n",
+    "* Start time `(2019-01-01 00:00:00)`\n",
+    "* End time `(2019-01-01 23:59:59)`\n",
+    "* Poolsize `(300, 420, 600)`\n",
+    "    \n",
+    "### Output: \n",
+    "* CSV / Pandas DF that contains data for the next cycle\n",
+    "    * The dataframe will contain these fields: \n",
+    "         1. id\n",
+    "         2. tpep_pickup_datetime\n",
+    "         3. tpep_dropoff_datetime\n",
+    "         4. passenger_count\n",
+    "         5. trip_distance - acquired from OSRM\n",
+    "         6. PULocationID\n",
+    "         7. DOLocationID\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Stage 2: Graph Construction\n",
+    "\n",
+    "This stage is responsible to construct graphs using networX to model the relationships between passengers. \n",
+    "The connected edges represent the rides that are merged. \n",
+    "\n",
+    "### Input Parameters: \n",
+    "* Poolsize\n",
+    "* Weight calculating functions as arguments\n",
+    " "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Stage 3: Visualization\n",
+    "\n",
+    "This stage is responsible to gather data from stage to for Visualization\n",
+    "\n",
+    "### Input Parameters: \n",
+    "* TBD\n",
+    "* TBD"
    ],
    "cell_type": "markdown",
    "metadata": {}
