--- a/nyc_ride_simulation.ipynb
+++ b/nyc_ride_simulation.ipynb
@@ -42,9 +42,9 @@
     "</div>\n",
     "\n",
     "### Input: \n",
-    "* Start time `(2019-01-01 00:00:00)`\n",
-    "* End time `(2019-01-01 23:59:59)`\n",
-    "* Poolsize `(300, 420, 600)`\n",
+    "* Start time ``(2019-01-01 00:00:00)``\n",
+    "* End time ``(2019-01-01 23:59:59)``\n",
+    "* Poolsize ``(300, 420, 600)``\n",
     "    \n",
     "### Output: \n",
     "* CSV / Pandas DF that contains data for the next cycle\n",
