--- a/nyc_ride_simulation.ipynb
+++ b/nyc_ride_simulation.ipynb
@@ -10,9 +10,13 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.8.8"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python388jvsc74a57bd0a0326998f42f45cdf4fa07683a4c17a5d1586f4c5cfcf7cdaf4ddb7918bb174f",
+   "display_name": "Python 3.8.8 64-bit ('nyc_rideshare': conda)"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
@@ -59,6 +63,63 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd \n",
+    "import geopandas as gpd\n",
+    "import psycopg2 \n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "plt.style.use('ggplot')\n",
+    "\n",
+    "# Constants\n",
+    "interval_dict = {\n",
+    "    60: \"\"\"'1 MINUTES'\"\"\",\n",
+    "    900: \"\"\"'15 MINUTES'\"\"\",\n",
+    "    300: \"\"\"'5 MINUTES'\"\"\",\n",
+    "    540: \"\"\"'7 MINUTES'\"\"\"\n",
+    "}\n",
+    "pool_size = 300\n",
+    "day_in_seconds = 24 * 3600"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_data(start_time, end_time, pool_size)\n",
+    "    start_time = datetime(2019, 1,1, 00, 00,00) + timedelta(seconds=i)\n",
+    "    time_string = start_time.strftime(\"%Y%m%d_%H%M%S\")\n",
+    "\n",
+    "    filename = f\"taxi_data_{time_string}.csv\"\n",
+    "\n",
+    "\n",
+    "    query = f\"\"\"select id, tpep_pickup_datetime, tpep_dropoff_datetime, passenger_count, \"PULocationID\", \"DOLocationID\", ST_Distance(pickup_shape, dropoff_shape, false)\n",
+    "    from nyc_taxi_schema.get_cust_between_timestamps_lgd('{start_time.strftime(\"%Y-%m-%d %H:%M:%S\")}', {interval_dict[second_value]});\"\"\"\n",
+    "    df_temp = pd.read_sql_query(query, nyc_database)\n",
+    "    df_temp.to_csv(path_or_buf=r\"./data/output/\"+filename, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(0, ((24 * 3600 * 2 )), second_value):\n",
+    "    \n",
+    "    "
+   ]
   },
   {
    "source": [
