added logic to generate dataframe

--- a/nyc_ride_simulation.ipynb
+++ b/nyc_ride_simulation.ipynb
@@ -66,60 +66,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd \n",
     "import geopandas as gpd\n",
-    "import psycopg2 \n",
+    "import psycopg2\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "from datetime import datetime, timedelta\n",
+    "from sqlalchemy import create_engine\n",
     "\n",
     "plt.style.use('ggplot')\n",
     "\n",
     "# Constants\n",
     "interval_dict = {\n",
-    "    60: \"\"\"'1 MINUTES'\"\"\",\n",
-    "    900: \"\"\"'15 MINUTES'\"\"\",\n",
-    "    300: \"\"\"'5 MINUTES'\"\"\",\n",
-    "    540: \"\"\"'7 MINUTES'\"\"\"\n",
+    "    \"1hour\": \"\"\"1 HOURS\"\"\",\n",
+    "    \"1day\": \"\"\"1 DAYS\"\"\",\n",
+    "    \"1month\": \"\"\"1 MONTHS\"\"\"\n",
+    "\n",
     "}\n",
     "pool_size = 300\n",
-    "day_in_seconds = 24 * 3600"
+    "day_in_seconds = 24 * 3600\n",
+    "\n",
+    "\n",
+    "# Connect to DB\n",
+    "\n",
+    "conn_string = \"postgresql://nycrideshare:nycrideshare@127.0.0.1:5432/nyc_taxi\"\n",
+    "nyc_database = create_engine(conn_string)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_data(start_time, end_time, pool_size)\n",
-    "    start_time = datetime(2019, 1,1, 00, 00,00) + timedelta(seconds=i)\n",
-    "    time_string = start_time.strftime(\"%Y%m%d_%H%M%S\")\n",
+    "def generate_data(start_time, data_size_duration):\n",
+    "    '''\n",
+    "    This function aims to get a chunk of data for a month or day. Depending on the need.\n",
     "\n",
-    "    filename = f\"taxi_data_{time_string}.csv\"\n",
+    "    [start_time]: datetime object\n",
+    "    [data_size_duration]: one of the values specified in the interval_dict \n",
     "\n",
-    "\n",
-    "    query = f\"\"\"select id, tpep_pickup_datetime, tpep_dropoff_datetime, passenger_count, \"PULocationID\", \"DOLocationID\", ST_Distance(pickup_shape, dropoff_shape, false)\n",
-    "    from nyc_taxi_schema.get_cust_between_timestamps_lgd('{start_time.strftime(\"%Y-%m-%d %H:%M:%S\")}', {interval_dict[second_value]});\"\"\"\n",
-    "    df_temp = pd.read_sql_query(query, nyc_database)\n",
-    "    df_temp.to_csv(path_or_buf=r\"./data/output/\"+filename, index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(0, ((24 * 3600 * 2 )), second_value):\n",
+    "    '''\n",
     "    \n",
+    "    time_string = start_time.strftime(\"%Y%m%d_%H%M%S\")\n",
+    "    query = \\\n",
+    "        f\"\"\"select \n",
+    "        id, \n",
+    "        tpep_pickup_datetime, \n",
+    "        tpep_dropoff_datetime, \n",
+    "        passenger_count, \n",
+    "        \"PULocationID\", \n",
+    "        \"DOLocationID\"\n",
+    "        from nyc_taxi_schema.get_cust_between_timestamps_lgd('{start_time.strftime(\"%Y-%m-%d %H:%M:%S\")}', '{interval_dict[data_size_duration]}');\"\"\"\n",
+    "    df_temp = pd.read_sql_query(query, nyc_database)\n",
+    "    return df_temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_time = datetime(2019, 1,1, 00, 00,00)\n",
+    "data_size_duration = \"1hour\"\n",
+    "df_jan = generate_data(start_time, data_size_duration)\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "9.458480834960938\n1239726\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "source": [
